<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/Your_photos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/Music_menu" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_settings_voice_black_24dp"
            android:title="@string/your_assistant" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
